obj/Debug/net6.0/CubeScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/GAMER/source/repos/ProtoGram/CubeScript.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class CubeScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, WHILE=47, ARRAY=48, Comment=49, BOOL_OPERATOR=50, INTEGER=51, 
		FLOAT=52, IMPORT=53, STRING=54, BOOL=55, TYPE=56, NULL=57, WS=58, IDENTIFIER=59;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_ifBlock = 3, 
		RULE_elseifBlock = 4, RULE_whileBlock = 5, RULE_assignment = 6, RULE_functionCall = 7, 
		RULE_block = 8, RULE_expression = 9, RULE_multOp = 10, RULE_addOp = 11, 
		RULE_cmpOp = 12, RULE_boolOp = 13, RULE_constant = 14;
	public static readonly string[] ruleNames = {
		"program", "line", "statement", "ifBlock", "elseifBlock", "whileBlock", 
		"assignment", "functionCall", "block", "expression", "multOp", "addOp", 
		"cmpOp", "boolOp", "constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "'using'", "'.'", "';'", "'for'", "'('", "')'", "'struct'", "','", 
		"'{'", "'}'", "'>'", "'='", "'string'", "'return'", "'break'", "'continue'", 
		"'house'", "':'", "'['", "']'", "'if'", "'else'", "'!'", "'?'", "'++'", 
		"'--'", "'*'", "'/'", "'%'", "'^'", "'<<'", "'>>'", "'&'", "'|'", "'&&'", 
		"'||'", "'+='", "'-='", "'*='", "'+'", "'-'", "'<'", "'<='", "'>='", "'=='", 
		"'!='", null, null, null, null, null, null, null, null, null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "WHILE", 
		"ARRAY", "Comment", "BOOL_OPERATOR", "INTEGER", "FLOAT", "IMPORT", "STRING", 
		"BOOL", "TYPE", "NULL", "WS", "IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CubeScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static CubeScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CubeScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CubeScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CubeScriptParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 862861541108871322L) != 0)) {
				{
				{
				State = 30;
				line();
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 36;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfBlockContext ifBlock() {
			return GetRuleContext<IfBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileBlockContext whileBlock() {
			return GetRuleContext<WhileBlockContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 41;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__2:
			case T__3:
			case T__6:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case ARRAY:
			case INTEGER:
			case FLOAT:
			case IMPORT:
			case STRING:
			case BOOL:
			case TYPE:
			case NULL:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 38;
				statement();
				}
				break;
			case T__20:
				EnterOuterAlt(_localctx, 2);
				{
				State = 39;
				ifBlock();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 40;
				whileBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ForeachstatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(CubeScriptParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ForeachstatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterForeachstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitForeachstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForeachstatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ContinuestatementContext : StatementContext {
		public ContinuestatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterContinuestatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitContinuestatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContinuestatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class HousestatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(CubeScriptParser.IDENTIFIER, 0); }
		public HousestatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterHousestatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitHousestatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHousestatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VaribledeclarationContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE() { return GetToken(CubeScriptParser.TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(CubeScriptParser.IDENTIFIER, 0); }
		public VaribledeclarationContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterVaribledeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitVaribledeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVaribledeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignmentexprContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public AssignmentexprContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterAssignmentexpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitAssignmentexpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignmentexpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ImportstatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(CubeScriptParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(CubeScriptParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMPORT() { return GetToken(CubeScriptParser.IMPORT, 0); }
		public ImportstatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterImportstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitImportstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportstatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctioncallstatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(CubeScriptParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TYPE() { return GetTokens(CubeScriptParser.TYPE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE(int i) {
			return GetToken(CubeScriptParser.TYPE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public FunctioncallstatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterFunctioncallstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitFunctioncallstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctioncallstatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BreakstatementContext : StatementContext {
		public BreakstatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterBreakstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitBreakstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBreakstatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ForstatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(CubeScriptParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(CubeScriptParser.IDENTIFIER, i);
		}
		public ForstatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterForstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitForstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForstatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctioncallstatmentContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(CubeScriptParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(CubeScriptParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public FunctioncallstatmentContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterFunctioncallstatment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitFunctioncallstatment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctioncallstatment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringarrayContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(CubeScriptParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(CubeScriptParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ARRAY() { return GetToken(CubeScriptParser.ARRAY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(CubeScriptParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE() { return GetToken(CubeScriptParser.TYPE, 0); }
		public StringarrayContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterStringarray(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitStringarray(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringarray(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ReturnstatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ReturnstatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterReturnstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitReturnstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICubeScriptVisitor<TResult> typedVisitor = visitor as ICubeScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnstatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ArraydefinitionContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(CubeScriptParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(CubeScriptParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ARRAY() { return GetToken(CubeScriptParser.ARRAY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ArraydefinitionContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.EnterArraydefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICubeScriptListener typedListener = listener as ICubeScriptListener;
			if (typedListener != null) typedListener.ExitArraydefinition(this);
		}
